<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/appname_login"
        android:layout_width="199dp"
        android:layout_height="55dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="@font/bakbak_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_login"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/texto_bienvenida_login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <EditText
        android:id="@+id/etpassword_login"
        style="@style/EditTextRounded"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:hint="@string/contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etuser_login" />

    <EditText
        android:id="@+id/etuser_login"
        style="@style/EditTextRounded"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:hint="@string/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_login" />

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="60dp"
        android:layout_height="142dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_login"
        app:srcCompat="@drawable/iconos" />

    <Button
        android:id="@+id/buttonRegister_login"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/orange"
        android:text="@string/registro"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="108dp"
        android:backgroundTint="@color/orange"
        android:text="@string/loginbuttom"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpassword_login"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/recuperacontra_login"
        android:layout_width="306dp"
        android:layout_height="51dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/recupera_contraseña"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/btn_igoogle"
        android:layout_width="303dp"
        android:layout_height="68dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/ingreso_google"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/goggle_logo"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/orange"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoicon" />

</androidx.constraintlayout.widget.ConstraintLayout>